<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_margin="@dimen/margin_10"
    tools:context=".uicomponents.activities.makenote.MakeNoteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Note Color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_5"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_5"
        android:weightSum="1"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:layout_height="wrap_content"
            android:id="@+id/btnRed"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:layout_height="wrap_content"
            android:id="@+id/btnGreen"

            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:layout_height="wrap_content"
            android:id="@+id/btnBlue"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:layout_height="wrap_content"
            android:id="@+id/btnYellow"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.20"
            android:layout_height="wrap_content"
            android:id="@+id/btnDefault"
            />

    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addNoteLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addNoteTitle"
            android:hint="@string/note_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addNoteDescriptionLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/margin_5"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addNoteDescription"
            android:minHeight="250dp"
            android:gravity="start"
            android:hint="Note Description"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>